integration of tailwind css

--- a/templates/main.html
+++ b/templates/main.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>University Research Information System</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    
 </head>
 <body>
+
+    <nav class="bg-gray-800 py-4">
+        <div class="container mx-auto flex justify-between items-center">
+          <a href="#" class="text-white text-xl font-bold">My Website</a>
+          <ul class="flex space-x-4">
+            <li><a href="#" class="text-white">Home</a></li>
+            <li><a href="#" class="text-white">About</a></li>
+            <li><a href="#" class="text-white">Services</a></li>
+            <li><a href="#" class="text-white">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      
     {% include 'navbar.html' %}
 
     {% block content %}
