--- a/templates/main.html
+++ b/templates/main.html
@@ -9,40 +9,70 @@
     <title>University Research Information System</title>
 
     <!-- Can be removed -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@2.6.0/dist/full.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- LEGIT 100% -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    
+    <!-- LEGIT 100% -->
+    <link rel="stylesheet" href="{% static 'tailwindcss/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <!-- FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,700&display=swap" rel="stylesheet"/>
 </head>
+
 <body>
 
-
-<nav class="bg-gray-800 p-8">
-    <div class="container mx-auto flex justify-between items-center">
-        <a href="#" class="text-white text-2xl font-semibold">University Research Information Management</a>
-        <div class="flex space-x-4 md:hidden">
-            <!-- Hamburger menu icon for mobile -->
-            <button id="mobile-menu-button"
-                    class="text-white inline-flex p-2 rounded-md hover:bg-gray-700 focus:outline-none focus:ring">
-                <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                          d="M4 6h16M4 12h16M4 18h16"></path>
-                </svg>
-            </button>
+    <nav class="navbar bg-base-100">
+        <div class="flex-1">
+            <a href="#" class="flex items-center">
+                <img src="{% static 'assets/PUPLogo.png' %}" class="h-8 mr-3" alt="Flowbite Logo">
+                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">PUP Research Information Management</span>
+            </a>
         </div>
-        <ul id="mobile-menu" class="hidden md:flex md:space-x-4 md:p-0">
-            <li><a href="#" class="text-white">Home</a></li>
-            <li><a href="#" class="text-white">About</a></li>
-            <li><a href="#" class="text-white">Services</a></li>
-            <li><a href="#" class="text-white">Contact</a></li>
-        </ul>
-    </div>
-</nav>
+        <div class="flex-none">
+          <div class="dropdown dropdown-end">
+            <label tabindex="0" class="btn btn-ghost btn-circle">
+              <div class="indicator">
+                <i class="fa fa-bell" aria-hidden="true"></i>
 
-
-
+                <span class="badge badge-sm indicator-item">8</span>
+              </div>
+            </label>
+            <div tabindex="0" class="mt-3 z-[1] card card-compact dropdown-content w-52 bg-base-100 shadow">
+              <div class="card-body">
+                <span class="font-bold text-lg">8 Items</span>
+                <span class="text-info">Subtotal: $999</span>
+                <div class="card-actions">
+                  <button class="btn btn-primary btn-block">View cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="dropdown dropdown-end">
+            <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+              <div class="w-10 rounded-full">
+                <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+              </div>
+            </label>
+            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+              <li>
+                <a class="justify-between">
+                  Profile
+                  <span class="badge">New</span>
+                </a>
+              </li>
+              <li><a>Settings</a></li>
+              <li><a>Logout</a></li>
+            </ul>
+          </div>
+        </div>
+    </nav>
 
       
     {% include 'navbar.html' %}
@@ -58,6 +88,8 @@
 </html>
 
 <!-- JavaScript to toggle mobile menu -->
+
+
 <script src="{% static 'js/index.js' %}"></script>
 
 
